Added the new page for Stylustory sction

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <div class="cell small-10">
           <h2 class="Second-heading Heading">Stylus Stories</h2>
           <p class="cell">The way I lt you see my experiences and professional insights in design's game</p>
-            <button class="clear button"type="button" name="button">Go for it >></button>
+            <button class="clear button"type="button" name="button">
+
+                Go for it >></button>
         </div>
       </div>
       <!-- Stylus Stories -->
