All text and calls are translate!

--- a/product-design.html
+++ b/product-design.html
@@ -22,8 +22,9 @@
             </div>
             <div class="cell">
                 <div class="Heading">
+                    <h1>
 
-                    <h1>PRODUCT DESIGNER</h1>
+                        PRODUCT DESIGNER</h1>
                     <p class="Negative-margin-top Small-line-height">
                         <span class="Color-blue">
 
@@ -56,11 +57,13 @@
 
                             <img class="Retina-small-icon" src="imgs\mkt-icon.png" alt="MKT">
                         </div>
+                        <div class="cell">
+                            <a href="https://youtu.be/EgAsoblQitI" class="hollow button alert Margin-top expanded" target="_blank">>> Play video
+                            </a>
+                        </div>
                     </div>
-                    <button class="button alert expanded callout Margin-top">Play video</button>
-
                   </div>
-                </div>
+              </div>
             </div>
       </div>
       <!-- Header cover ends-->
@@ -148,17 +151,26 @@
 
                 You can touch people saying the right words.<br>
                 Keep a continuous dialogue with the other side out screen person. Taking advantage of each opportunities we have informing, advertising, asking or greeting. The copywriting is <b>designed for</b> enchantment with appropriate style.</p>
-            <div class="cell Margin-bottom">
+            <div class="cell Margin-bottom text-center">
 
-              <img src="imgs\copy-0-masclapp.png" alt="Plan Curricular">
+                <img src="imgs\copy-0-masclapp.png" alt="Plan Curricular">
+                <p>
+                          *Year after year all the curricular plan proposed by MINEDUC is already incorporate for you
+                </p>
             </div>
-            <div class="cell Margin-bottom">
+            <div class="cell text-center Margin-bottom">
 
-              <img src="imgs\copy-1-masclapp.png" alt="Evaluaciones">
+                <img src="imgs\copy-1-masclapp.png" alt="Evaluaciones">
+                <p>
+                    *Tedious evaluations are now instantaneous. Ease in more than 600 evaluation assignments
+                </p>
             </div>
-            <div class="cell Margin-bottom">
+            <div class="cell text-center Margin-bottom">
 
               <img src="imgs\copy-2-masclapp.png" alt="Plan Lector">
+              <p>
+                  *Stop worrying about asking the parents to buy the books.
+              </p>
             </div>
       </div>
       <!-- Copys end -->
@@ -175,25 +187,40 @@
                     </div>
                 </div>
           </div>
+          <div class="cell Margin-bottom">
 
+              <img src="imgs\illu-0-wide-masclapp.png" alt="Profesores y Alumnos portada de la sección">
+          </div>
           <p class="cell">
 
-              Colección de iconos e ilustraciones que exhiben la nueva personalidad de la app.</p>
-          <div class="cell Margin-bottom">
+              Thanks graphic style the entire personality corp, can land  down on people's feeling in a marvelous way.</p>
+          <div class="cell Margin-bottom text-center">
 
-              <img src="imgs\illu-0-wide-masclapp.png" alt="Profesores y Alumnos"></div>
-          <div class="cell Margin-bottom">
+              <img src="imgs\illu-1-square-masclapp.png" alt="Notebook MasterClass ad">
+              <p>
+                    Using for advertise the laptop sales</p>
+          </div>
+          <div class="cell Margin-bottom text-center">
 
-              <img src="imgs\illu-1-square-masclapp.png" alt="Notebook MasterClass"></div>
-          <div class="cell Margin-bottom">
+              <img src="imgs\illu-2-squere-masclapp.png" alt="Tablet plan lector">
+                <p>
 
-              <img src="imgs\illu-2-squere-masclapp.png" alt="Tablet plan lector"></div>
-          <div class="cell Margin-bottom">
+                    Infographic for reading plan section</p>
+          </div>
+          <div class="cell Margin-bottom text-center">
 
-              <img src="imgs\icon-set-masclapp.png" alt="Icon Set"></div>
-          <div class="cell Margin-bottom">
+            <img src="imgs\icon-set-masclapp.png" alt="Icon Set">
+            <p>
 
-              <img src="imgs\icon-curs-masclapp.png" alt="Cursos y cronogramas"></div>
+                Icon set collection of the UI kit</p>
+          </div>
+          <div class="cell Margin-bottom text-center">
+
+                <img src="imgs\icon-curs-masclapp.png" alt="Cursos y cronogramas">
+                <p>
+                    Media content cover
+                </p>
+          </div>
       </div>
       <!-- Arts ends -->
       <!-- Videos -->
@@ -202,34 +229,40 @@
             <div class="grid-x align-middle align-justify">
                 <h2 class="Second-heading cell small-10">
                     Videos</h2>
-                <div class="cell
-                auto medium-1 text-right">
+                <div class="cell auto medium-1 text-right">
 
                     <img class="Retina-small-icon" src="imgs\mkt-icon.png" alt="Icon MKT">
                 </div>
             </div>
         </div>
-        <p class="cell">
+            <div class="YTube widescreen flex-video cell">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bHD7TpdaEoE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="cell">
+                <p>
 
-            Para que verdaderamente te conozcan deben escuchar y verte. Así publicitas mejor como tu producto puede ayudar en el diario vivir de las personas.</p>
-            <div class="cell Margin-bottom">
+                    To truly know you, they must listen and see you. So you can advertise how your product help people improving them lifestyle daily.</p>
+            </div>
+            <div class="cell Margin-bottom text-center">
 
                 <img src="imgs\Screenshot_20190403-145648_YouTube.jpg" alt="Stylus Channel">
+                <p>
+                    Screenshot of my Channel
+                </p>
             </div>
-            <div class="YTube widescreen flex-video cell">
-                <iframe src="" width="" height=""></iframe>
-            </div>
+            <div class="cell">
+                <a class="button expanded hollow alert" href="#">>> Watch all the content on playlist
 
-      </div>
+</a>
+            </div>
+        </div>
       <!-- Videos Ends -->
       <!-- footer -->
       <div class="grid-x grid-padding-x Margin-top">
           <div class="cell text-center">
              <img src="imgs\divider.png" alt="" class="divider-white">
              <p class="Design-quote">
-                 Traer un <b>producto</b> a la vida
-involucra ser parte del <b>estilo</b> de vida
-de las <b>personas</b>
+                 Bringing a <b>product</b> to life involves being part of <b>people's lifestyle</b>
              </p>
              <img src="imgs\divider.png" alt="" class="divider-white">
              <p class="Footer-text-size">Made with love by Stylustonypro | Designed For</p>
