--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
         <div class="cell small-10">
           <h2 class="Second-heading Heading">Stylus Stories</h2>
           <p class="cell">The way I lt you see my experiences and professional insights in design's game</p>
-            <button class="clear button"type="button" name="button">
+          <a class="button hollow expanded" href="https://stylustonypro.github.io/product-design.html" target="_blank">
 
-                Go for it >></button>
+              Go for it >></a>
         </div>
+
       </div>
       <!-- Stylus Stories -->
       <!-- Stylus Tao -->
