Basic staff to make it works

--- a/index.html
+++ b/index.html
@@ -4,79 +4,134 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="tonyfavicon.png">
     <title>Stylustonypro</title>
+    <link rel="stylesheet" href="styfont/demo.css">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <div class="grid-container">
         <!-- Header cover -->
+        <div class="grid-x grid-margin-x align-bottom align-center Cover-height Cover-img">
+            <div class="cell small-4">
+                <img src="imgs/avatar.png" alt="Avatar Tony">
+            </div>
+            <div class="cell small-6">
+                <div class="Heading">
+                    <h1>
 
-            <div class="grid-x grid-margin-x align-bottom align-right Cover-height Cover-img">
-                <div class="cell small-4">
-                    <img src="imgs/avatar.png" alt="Avatar Tony">
-                </div>
-                <div class="cell small-7">
-                    <div class="Heading">
-                        <h1>Antonio Silva</h1>
-                        <span class="Negative-margin-top Small-line-height">
-                            <span class="White-color-light">
-                                @stylustonypro
-                            </span><br>
+                        Antonio Silva</h1>
+                    <span class="Negative-margin-top Small-line-height White-color-light">
 
-                        </span>
+                            @stylustonypro<br>
+                    </span>
+                    <div class="flex-container align-justify Margin-bottom-6">
+                        <a href="https://github.com/stylustonypro" target="_blank">
+                            <span class="stycon-github"></span></a>
+                        <a href="https://www.instagram.com/stylustonypro/">
+                            <span class="stycon-instagram"></span></a>
+                        <a href="https://www.facebook.com/stylustonypro/">
+                            <span class="stycon-facebook2"></span></a>
+                        <a href="https://www.youtube.com/stylustonypro/">
+                            <span class="stycon-youtube"></span></a>
+                        <a href="https://www.linkedin.com/in/stylustonypro/"><span class="stycon-linkedin"></span></a>
+                    </div>
+                    <div class="flex-container align-justify">
                         <img class="Retina-small-icon" src="imgs/ui-icon.png" alt="UI">
                         <img class="Retina-small-icon" src="imgs/frontend-icon.png" alt="Front-end">
                         <img class="Retina-small-icon" src="imgs/mkt-icon.png" alt="MKT">
                     </div>
                 </div>
             </div>
+        </div>
       <!-- Header cover ends-->
       <!-- Stylus Quote  -->
-      <div class="grid-x grid-padding-x align-center Margin-top">
-          <div class="heading cell Quote-paragraph small-10 ">
+      <div class="grid-x grid-padding-x align-center Margin-top Margin-bottom">
+          <div class="heading cell small-10 Quote-paragraph">
+                <h2 class="Second-heading">
+                    a Graphic Designer</h2>
+                <p>
+                    Is who print style in front veryone eyes.<br>
+                    <span class="float-right Underline"><i> I am designed for </i> <span class="stycon-quill"> </span></span>
 
-                <h2 class="Second-heading cell">a Graphic Designer</h2>
-                <p>Is who print style in front veryone eyes.<br>
-                <span class="float-right"><i>I am designed for</i></span></p>
+                </p><br>
+                <div class="float-right">
+                    <button class="button hollow alert small" data-open="exampleModal1">
+                        <span class="stycon-bubbles2"> </span>
+                         Greetings to style</button>
+                </div>
+                <div class="reveal" id="exampleModal1" data-reveal>
+                    <h4> <span class="stycon-envelop"> </span> stylustonypro@gmail.com</h4>
+                    <p class="lead"><span class="stycon-user-tie"> </span> Is my email</p>
+                    <form class="" action="https://formspree.io/xayoywdk" method="post">
+                        <div class="grid-container">
+                            <div class="grid-x grid-padding-x">
+                                <div class="medium-6 cell">
+                                    <label>
+                                        <input type="text" placeholder="Please, give me yours" required>
+                                    </label>
+                                </div>
+                                <div class="medium-6 cell">
+                                    <label>
+                                        <input type="text" placeholder="How I call you?">
+                                    </label>
+                                </div>
+                              <div class="cell">
+                                  <label>
+                                    <textarea name="message" placeholder="Would you like a quick overview?"></textarea>
+                                  </label>
+                              </div>
+                              <button class="cell alert button" type="submit" value="Send" name="Mail me">
+                                    <span class="stycon-cool"> </span>
 
+                                    Done!
+                              </button>
+                            </div>
+                        </div>
+                    </form>
+                    <button class="close-button" data-close aria-label="Close reveal" type="button">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
           </div>
       </div>
       <!-- Quote Ends -->
       <!-- Stylus Stories -->
 
-      <div class="grid-x grid-padding-x media-object align-center Margin-top">
+      <div class="grid-x grid-padding-x media-object align-center Margin-top-extra">
         <div class="cell small-10">
-          <h2 class="Second-heading Heading">Stylus Stories</h2>
-          <p class="cell">The way I lt you see my experiences and professional insights in design's game</p>
-          <a class="button hollow expanded" href="https://stylustonypro.github.io/product-design.html" target="_blank">
+          <h2 class="Second-heading Heading"><span class="stycon-feed"> </span> Stylus Stories</h2>
+          <p class="cell">Let you see my experiences and professional insights in design's game
+</p>
+          <a class="button hollow expanded" href="product-design.html" target="_blank">
 
-              Go for it >></a>
+              <span class="stycon-coin-dollar"> </span> Go for it >></a>
         </div>
 
       </div>
       <!-- Stylus Stories -->
       <!-- Stylus Tao -->
-      <img src="imgs/divider.png" alt="" class="divider-white">
-
-      <div class="grid-x grid-padding-x Margin-top media-object align-center">
+      <div class="grid-x grid-padding-x Margin-top-extra media-object align-center">
             <div class="heading cell small-10">
 
-                <h2 class="Second-heading Heading">Stylus Tao</h2>
-                <p class="">Experiments and hobbies than increase my style knowledge.</p>
-                <button class="clear button"type="button" name="button">Check it out!</button>
+                <h2 class="Second-heading Heading"><span class="stycon-yinyan2"> </span>Stylus Tao</h2>
+                <p class="">Training, experiments and hobbies than increase my style knowledge.</p>
+                <a class="button hollow expanded"type="button" name="button">
+                    <span class="stycon-eye"> </span>
+
+                    Check it out!</a>
 
             </div>
         </div>
-        <img src="imgs/divider.png" alt="" class="divider-white">
-
+        <img src="imgs/divider.png" alt="" class="divider-white Margin-top-extra">
       <!-- Stylus Tao -->
 
       <!-- footer -->
-      <div class="grid-x grid-padding-x Margin-top">
+      <div class="grid-x grid-padding-x">
           <div class="cell text-center">
-             <p class="Footer-text-size">Made with love by Stylustonypro | Designed For</p>
-             <p class="Small-text">Antonio Silva Molina profetional graphic designer</p>
+             <p class="Footer-text-size">Made with <span class="stycon-heart"> </span>by Stylustonypro | Designed For</p>
+             <p class="Small-text"><span class="stycon-user-tie"> </span> Antonio Silva Molina profetional graphic designer</p>
           </div>
       </div>
       <!-- footer Ends -->
