--- a/product-design.html
+++ b/product-design.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product designer story</title>
+    <link rel="icon" type="image/png" href="tonyfavicon.png">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
@@ -17,8 +18,9 @@
                 <img src="imgs\masclapp-logo.png" alt="Logo MasClapp">
             </figure>
             <div class="cell Margin-bottom">
+                <h5 class="Inc-description">
 
-                <h5 class="Inc-description">Built to help out teachers prepare their content classes, schedules and tests. Providing a happier organizational climate in school ever</h5>
+                    Built to help out teachers prepare their content classes, schedules and tests. Providing a happier organizational climate in school ever</h5>
             </div>
             <div class="cell">
                 <div class="Heading">
@@ -35,10 +37,12 @@
                             February to November 2016</span></br>
                     <p class="Small-line-height">
                         <span class="Small-font Color-blue ">
+
                             Corp:</span></br>
                             KDOCE Educational Solutions <br></p>
                     <p class="Small-line-height">
                         <span class="Color-blue">
+
                             Design Field:</span><br>
                             Digital product</p>
                 </div>
@@ -58,7 +62,7 @@
                             <img class="Retina-small-icon" src="imgs\mkt-icon.png" alt="MKT">
                         </div>
                         <div class="cell">
-                            <a href="https://youtu.be/EgAsoblQitI" class="hollow button alert Margin-top expanded" target="_blank">>> Play video
+                            <a href="https://youtu.be/EgAsoblQitI" class="hollow button alert Margin-top expanded" target="_blank"><span class="stycon-video-camera"> </span> Play video
                             </a>
                         </div>
                     </div>
@@ -71,7 +75,6 @@
         <div class="grid-x grid-padding-x Margin-top-extra">
             <div class="heading cell">
                 <div class="grid-x align-middle align-justify">
-
                     <h2 class="Second-heading cell small-8">
 
                         Restyling</h2>
@@ -84,18 +87,22 @@
             <div class="cell text-center">
 
                 <img src="imgs\old-ui-masclapp.png" alt="">
-                <p>Old UI</p>
+                <p class="Bg-color-dark">
+
+                    Old UI</p>
             </div>
             <div class="cell">
                 <p>
 
                     The app must to be used it. And all I saw when I used for the first. Was, even an old and wrong computer.</p>
             </div>
-            <div class="cell text-center">
+            <div class="cell text-center Margin-top-extra">
 
                 <img src="imgs\new-ui-masclapp0.png" alt="New UI MasClapp">
                 <img class="Margin-top" src="imgs\new-ui-masclapp.png" alt="Asignatura">
-                <p>New One</p>
+                <p class="Bg-color-dark">
+
+                    New One</p>
             </div>
             <div class="cell">
 
@@ -129,7 +136,7 @@
       </div>
       <!-- code ends -->
       <!-- Copys -->
-      <div class="grid-x grid-padding-x Margin-top-extra">
+      <div class="grid-x grid-padding-x Margin-top-extra align-center">
             <div class="heading cell">
                 <div class="grid-x align-middle align-justify">
                     <h2 class="Second-heading cell small-10">
@@ -149,41 +156,54 @@
             </div>
             <p class="cell">
 
-                You can touch people saying the right words.<br>
-                Keep a continuous dialogue with the other side out screen person. Taking advantage of each opportunities we have informing, advertising, asking or greeting. The copywriting is <b>designed for</b> enchantment with appropriate style.</p>
-            <div class="cell Margin-bottom text-center">
+                <b>You can touch people saying the right words.</b><br>
+                Keep a continuous dialogue with the other side out screen person. Taking advantage of each opportunities we have informing, advertising, asking or greeting. The copywriting is <b><i>designed for</i> enchantment</b> with appropriate <b>style.</b>
+
+            </p>
+            <a href="adstylus.html" class="cell small-9 button expanded small hollow">
+                <span class="stycon-diamonds"> </span>
+
+                You already new this. Right?
+            </a>
+
+            <div class="cell Margin-bottom text-center Margin-top">
 
                 <img src="imgs\copy-0-masclapp.png" alt="Plan Curricular">
-                <p>
+                <p class="Bg-color-dark">
                           *Year after year all the curricular plan proposed by MINEDUC is already incorporate for you
                 </p>
             </div>
             <div class="cell text-center Margin-bottom">
 
                 <img src="imgs\copy-1-masclapp.png" alt="Evaluaciones">
-                <p>
+                <p class="Bg-color-dark">
                     *Tedious evaluations are now instantaneous. Ease in more than 600 evaluation assignments
                 </p>
             </div>
             <div class="cell text-center Margin-bottom">
 
               <img src="imgs\copy-2-masclapp.png" alt="Plan Lector">
-              <p>
+              <p class="Bg-color-dark">
                   *Stop worrying about asking the parents to buy the books.
               </p>
             </div>
+            <a href="adstylus.html" class="cell small-9 button small expanded hollow success">
+
+                <span class="stycon-credit-card"> </span> Copywriting it now!
+            </a>
+
       </div>
       <!-- Copys end -->
       <!-- Arts -->
-      <div class="grid-x grid-padding-x Margin-top">
+        <div class="grid-x grid-padding-x Margin-top-extra">
           <div class="cell">
                 <div class="grid-x align-middle align-justify">
                     <h2 class="Second-heading cell small-10">
 
                         Arts</h2>
-                    <div class="cell medium-1 text-right">
+                    <div class="cell auto medium-1 text-right">
 
-                        <img class="cell auto Retina-small-icon "src="imgs\mkt-icon.png" alt="Icon MKT">
+                        <img class="Retina-small-icon "src="imgs\mkt-icon.png" alt="Icon MKT">
                     </div>
                 </div>
           </div>
@@ -194,81 +214,172 @@
           <p class="cell">
 
               Thanks graphic style the entire personality corp, can land  down on people's feeling in a marvelous way.</p>
-          <div class="cell Margin-bottom text-center">
+          <div class="cell Margin-bottom text-center Margin-top">
 
               <img src="imgs\illu-1-square-masclapp.png" alt="Notebook MasterClass ad">
-              <p>
+              <p class="Bg-color-dark">
                     Using for advertise the laptop sales</p>
           </div>
           <div class="cell Margin-bottom text-center">
 
               <img src="imgs\illu-2-squere-masclapp.png" alt="Tablet plan lector">
-                <p>
+                <p class="Bg-color-dark">
 
                     Infographic for reading plan section</p>
           </div>
           <div class="cell Margin-bottom text-center">
 
             <img src="imgs\icon-set-masclapp.png" alt="Icon Set">
-            <p>
+            <p class="Bg-color-dark">
 
                 Icon set collection of the UI kit</p>
           </div>
           <div class="cell Margin-bottom text-center">
 
                 <img src="imgs\icon-curs-masclapp.png" alt="Cursos y cronogramas">
-                <p>
+                <p class="Bg-color-dark">
                     Media content cover
                 </p>
           </div>
       </div>
       <!-- Arts ends -->
       <!-- Videos -->
-      <div class="grid-x grid-padding-x Margin-top">
+      <div class="grid-x grid-padding-x Margin-top-extra align-center">
         <div class="cell">
             <div class="grid-x align-middle align-justify">
                 <h2 class="Second-heading cell small-10">
+
                     Videos</h2>
                 <div class="cell auto medium-1 text-right">
-
                     <img class="Retina-small-icon" src="imgs\mkt-icon.png" alt="Icon MKT">
                 </div>
             </div>
         </div>
-            <div class="YTube widescreen flex-video cell">
+        <div class="YTube widescreen flex-video cell">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/bHD7TpdaEoE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="cell">
+        </div>
+        <div class="cell">
                 <p>
 
                     To truly know you, they must listen and see you. So you can advertise how your product help people improving them lifestyle daily.</p>
-            </div>
-            <div class="cell Margin-bottom text-center">
-
-                <img src="imgs\Screenshot_20190403-145648_YouTube.jpg" alt="Stylus Channel">
-                <p>
-                    Screenshot of my Channel
-                </p>
-            </div>
-            <div class="cell">
-                <a class="button expanded hollow alert" href="#">>> Watch all the content on playlist
-
-</a>
-            </div>
         </div>
+        <div class="cell small-11">
+                <Button class="button expanded hollow" data-open="Video-form">
+                    <span class="stycon-video-camera"> </span>
+
+                    I'm hearing offert for this kind job
+                </Button>
+        </div>
+        <div class="reveal" id="Video-form" data-reveal>
+            <div class="grid-x align-center">
+                <div class="cell small-10 text-center">
+                    <span class="stycon-gift Text-bigger"> </span>
+                    <p class="lead">
+
+                I offer an unbeatable price for you brand new videos</p>
+                </div>
+            </div>
+            <form action="https://formspree.io/xayoywdk" method="post">
+                <div class="grid-container">
+                    <div class="grid-x grid-padding-x">
+                        <div class="medium-6 cell">
+                            <label>
+                                <input type="text" placeholder="let's getting in touch by mail" required>
+                            </label>
+                        </div>
+                        <div class="medium-6 cell">
+                            <label>
+                                <input type="text" placeholder="How I call you?">
+                            </label>
+                        </div>
+                      <div class="cell">
+                          <label>
+                            <textarea name="message" placeholder="I wanna make a vid for my site. Do you?"></textarea>
+                          </label>
+                      </div>
+                      <button class="cell alert button" type="submit" value="Send" name="Mail me for a Video">
+                            <span class="stycon-heart"> </span>
+
+                            Yes. I realy do!
+                      </button>
+                      <a href="adstylus.html" class="cell button clear expanded">
+
+                          No. I'm looking for something else :(
+                      </a>
+                    </div>
+                </div>
+            </form>
+            <button class="close-button" data-close aria-label="Close reveal" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="cell Margin-bottom text-center Margin-top">
+                <img src="imgs\Screenshot_20190403-145648_YouTube.jpg" alt="Stylus Channel">
+                <p class="Bg-color-dark">
+
+                    Screenshot of my Channel</p>
+        </div>
+        <div class="cell">
+                <a class="button expanded hollow alert" href="#">
+                    <span class="stycon-youtube"> </span>
+
+                    Watch all the content on playlist</a>
+        </div>
+    </div>
       <!-- Videos Ends -->
       <!-- footer -->
-      <div class="grid-x grid-padding-x Margin-top">
-          <div class="cell text-center">
+    <div class="grid-x grid-padding-x align-center Margin-top">
+        <div class="cell text-center">
              <img src="imgs\divider.png" alt="" class="divider-white">
              <p class="Design-quote">
-                 Bringing a <b>product</b> to life involves being part of <b>people's lifestyle</b>
-             </p>
+
+                 Bringing a <b>product</b> to life involves being part of <b>people's lifestyle</b><br>
+             _<span class="stycon-quill"></span></p>
+
+
              <img src="imgs\divider.png" alt="" class="divider-white">
-             <p class="Footer-text-size">Made with love by Stylustonypro | Designed For</p>
-             <p class="Small-text">Antonio Silva Molina profetional graphic designer</p>
-          </div>
-      </div>
+        </div>
+        <div class="cell small-10 text-center">
+            <a class="linkedin" href="http://cl.linkedin.com/in/stylustonypro" target="_blank">
+                <i class="fi-social-linkedin"></i>
+
+                Antonio Silva</a>
+            </div>
+        <div class="cell small-10 text-center">
+            <a class="facebook" href="https://www.facebook.com/stylustonypro" target="_blank"><i class="fi-social-facebook"></i>
+
+                stylustonypro</a>
+        </div>
+        <div class="cell small-10 text-center">
+            <a class="instagram" href="https://twitter.com/stylustonypro" target="_blank"><img src="imgs/ig-icon.png" alt="Isntaagram Icon" width="13px">
+
+                stylustonypro</a>
+        </div>
+        <div class="cell small-10 text-center">
+            <a class="github" href="http://github.com/stylustonypro/" target="_blank"><i class="fi-social-github"></i>
+
+                stylustonypro</a>
+        </div>
+        <div class="cell small-10 text-center">
+            <a class="youtube" href="https://www.youtube.com/c/Dibujalo" target="_blank"><i class="fi-social-youtube"></i>
+
+                stylustonypro</a>
+        </div>
+        <div class="cell small-10">
+            <a href="index.html" class="text-right button hollow secondary small expanded">
+
+                 Comming  <span class="stycon-home">  </span>
+            </a>
+        </div>
+        <div class="cell small-10 text-center">
+             <p class="Footer-text-size">
+
+                 Made with <span class="stycon-heart"></span> by Stylustonypro | Designed For</p>
+             <p class="Small-text">
+
+                 <span class="stycon-user-tie"> </span> Antonio Silva Molina profetional graphic designer</p>
+        </div>
+    </div>
       <!-- footer Ends -->
 
     <script src="js/vendor/jquery.js"></script>
